[tool.poetry]
name = "eventual"
version = "0.4.1"
description = ""
authors = ["Ivan Dmitriesvkii <ivan.dmitrievsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
eventual-rmq = { version = "^0", optional = true }
eventual-tortoise = { version = "^0", optional = true }

[tool.poetry.extras]
rmq = ["eventual-rmq"]
tortoise = ["eventual-tortoise"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pytest = "^5.2"
pytest-asyncio = "^0.14.0"
pytest-dotenv = "^0.5.2"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
