[tool.poetry]
name = "eventual"
version = "0.6.0"
description = ""
authors = ["Ivan Dmitriesvkii <ivan.dmitrievsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
eventual-rmq = { version = "^0", optional = true }
eventual-tortoise = { version = "^0", optional = true }
anyio = "^3.0.1"

[tool.poetry.extras]
rmq = ["eventual-rmq"]
tortoise = ["eventual-tortoise"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pytest = "^5.2"
pytest-asyncio = "^0.14.0"
pytest-dotenv = "^0.5.2"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"
mkautodoc = "^0.1.0"
autoflake = "^1.4"
coverage = "^5.5"
flake8 = "^3.9.1"
flake8-bugbear = "^21.4.3"
flake8-pie = "^0.8.1"
isort = "^5.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true

[tool.black]
target-version = ['py37']
