[tool.poetry]
name = "eventual"
version = "0.7.0"
description = ""
authors = ["Ivan Dmitriesvkii <ivan.dmitrievsky@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
anyio = "^3.0.1"
eventual-rmq = { version = "^0", optional = true }
eventual-tortoise = { version = "^0", optional = true }
pytz = "^2021.1"
typing-extensions = { version = "^3.10.0", python = "< 3.8" }

[tool.poetry.extras]
rmq = ["eventual-rmq"]
tortoise = ["eventual-tortoise"]

[tool.poetry.dev-dependencies]
black = "^20.8b1"
mypy = "^0.812"
pytest = "^5.2"
pytest-dotenv = "^0.5.2"
mkdocs = "^1.1.2"
mkdocs-material = "^7.1.3"
mkautodoc = "^0.1.0"
autoflake = "^1.4"
flake8 = "^3.9.1"
flake8-bugbear = "^21.4.3"
flake8-pie = "^0.8.1"
isort = "^5.8.0"
asynctest = "^0.13.0"
orjson = "^3.5.3"
coverage = "^5.5"
trio = "^0.18.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
multi_line_output = 3
combine_as_imports = true

[tool.black]
target-version = ['py37']
